# social-media-api

./: .env.example  README.md  fly.toml  pyproject.toml
.github/workflows/: pipeline.yml
alembic/: env.py
alembic/versions/: 60409d28a0a2_init.py
app/: deps.py  main.py  models.py  schema.py
app/config/: config.py  db.py  security.py
app/core/: config.py  db.py  security.py
app/routers/: auth.py  posts.py  votes.py
app/routes/: posts.py
tests/: conftest.py  test_status.py
tests/routes/: test_auth.py  test_posts.py  test_votes.py
