[project]
name = "social-media-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.31",
    "uvicorn[standard]>=0.40.0",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.21",
    "pwdlib[argon2]>=0.3.0",
    "alembic>=1.18.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "ty>=0.0.10",
]
